--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Acme-rafl-everywhere
+name    = Acme-rafl-Everywhere
 author  = Sawyer X <xsawyerx@cpan.org>
 license = Perl_5
 copyright_holder = Sawyer X
